consistency and z-index fix

--- a/src/components/Projects/CardContainer.css
+++ b/src/components/Projects/CardContainer.css
@@ -1,12 +1,13 @@
+@keyframes slide-down {
+  0% { margin-top: 100% }
+  100% { margin-top: 0 } 
+}
+
 .CardContainer {
   width: auto;
   height: auto;
   margin: 0px 25px 50px 25px;
   display: flex;
   flex-wrap: wrap;
-  transition: all 2s;
-}
-
-.CardContainer.before {
-  margin-top: 100%;
+  animation: slide-down 2s forwards;
 }
